--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <html ng-app="app">
 <head>
   <meta charset="utf-8">
-  <base href="/">
+  <base href="/ng1xts/">
   <title>Test App</title>
 </head>
 <body>
